[project]
name = "qwc-db-auth"
version = "v2025.12.15"
description = "Authentication with User DB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.1.0",
    "Werkzeug~=3.1.4",
    "Flask-JWT-Extended~=4.7.0",
    "flask_login~=0.6.3",
    "Flask-WTF~=1.2.1",
    "Flask-Mail2~=1.0.2",
    "Pillow~=12.1.0",
    "psycopg2~=2.9.9",
    "SQLAlchemy~=2.0.29",
    "pyotp~=2.9.0",
    "qrcode~=8.2",
    "python-i18n~=0.3.9",
    "email_validator~=2.3.0",
    "qwc-services-core~=1.5.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
